Added variable to specify vsphere VM folder

--- a/templates/install-config.yaml.j2
+++ b/templates/install-config.yaml.j2
@@ -23,6 +23,7 @@ platform:
     password: '{{ vcenter.password }}'
     datacenter: '{{ vcenter.datacenter }}'
     defaultDatastore: '{{ vcenter.datastore }}'
+    folder: '{{ vcenter.folder }}'
 fips: false
 networking:
   networkType: {{ openshift.networkType }}
