--- a/templates/append-bootstrap.ign.j2
+++ b/templates/append-bootstrap.ign.j2
@@ -1,18 +1,12 @@
 {
   "ignition": {
     "config": {
-      "append": [
+      "merge": [
         {
-          "source": "{{ bootstrap_ignition_config_url }}",
-          "verification": {}
+          "source": "{{ bootstrap_ignition_config_url }}"
         }
       ]
     },
-    "timeouts": {},
-    "version": "2.1.0"
-  },
-  "networkd": {},
-  "passwd": {},
-  "storage": {},
-  "systemd": {}
+    "version": "3.1.0"
+  }
 }
