--- a/templates/ocp4-vars-dynamic.yaml.j2
+++ b/templates/ocp4-vars-dynamic.yaml.j2
@@ -1,8 +1,8 @@
 
 ## DO NOT MODIFY THIS FILE BY HAND - IT IS MANAGED BY THE PLAYBOOK
 
-append_bootstrap_ign: ""
-
 master_ign: ""
 
 worker_ign: ""
+
+bootstrap_ign: ""
